# fullstack-ai-telegram-leads

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.infrastructure.yml  docker-compose.monitoring.yml  docker-compose.prod.yml
.env-example/: .env.agent  .env.backend  .env.frontend  .env.monitoring  .env.shared  .env.telegram
agent/: .eslintrc.json  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  test_auth.py  test_webhook.py
agent/telegram-assistant/: agent.py  config.py  prompts.py  test_message_history.py
agent/telegram-assistant/services/: __init__.py  auth_service.py  message_history_service.py
agent/telegram-assistant/shared_libraries/: callbacks.py
agent/telegram-assistant/tools/: tools.py
ai-session/: ai-session.controller.spec.ts  ai-session.controller.ts  ai-session.service.spec.ts
ai-session/dto/: create-ai-session.dto.ts  update-ai-session.dto.ts
backend/: Dockerfile  README.md  package-lock.json  package.json  startup.relational.dev.sh
backend/src/: app.module.ts  main.ts
docs/: MESSAGE_STORAGE_SYSTEM.md
frontend/: .gitlab-ci.yml  .prettierignore  Dockerfile.dev  Dockerfile.prod  Dockerfile.stage  next.config.mjs  package-lock.json  package.json
frontend/messages/: en.json  (+1 more)
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
storage/: .gitignore
telegram-client/: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
(+182 files in other folders)
