[project]
name = "telegram-assistant"
version = "0.1.0"
description = "PCMind AI Agent"
authors = [
    {name = "PK",email = "pkrasulia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
